--- a/package.json
+++ b/package.json
@@ -16,20 +16,26 @@
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@tauri-apps/cli": "^1.2.3",
     "@types/node": "^18.7.10",
-    "@types/qs": "^6.9.7",
+    "@types/nprogress": "^0.2.1",
+    "@types/qs": "^6.9.8",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^3.0.0",
     "antd": "^5.4.0",
-    "axios": "^1.3.5",
+    "axios": "^1.5.1",
+    "cherry-markdown": "^0.8.25",
     "less": "^4.1.3",
-    "qs": "^6.11.1",
+    "nprogress": "^0.2.0",
+    "qs": "^6.11.2",
     "react-cropper": "^2.3.2",
+    "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "store": "^2.0.12",
     "typescript": "^4.9.5",
-    "cherry-markdown": "^0.8.25",
     "vite": "^4.2.1"
   },
   "optionalDependencies": {
