--- a/package.json
+++ b/package.json
@@ -1,45 +1,38 @@
 {
-  "name": "note-pad",
+  "name": "pad-tool",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --mode dev",
     "build": "tsc && vite build --mode pro",
-    "preview": "vite preview",
-    "tauri": "tauri"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.2.0",
+    "@reduxjs/toolkit": "^2.2.3",
+    "antd": "^5.17.0",
+    "axios": "^1.6.8",
+    "nprogress": "^0.2.0",
+    "qs": "^6.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@reduxjs/toolkit": "^1.9.7",
-    "@tauri-apps/cli": "^1.2.3",
-    "@types/node": "^18.7.10",
-    "@types/nprogress": "^0.2.1",
-    "@types/qs": "^6.9.8",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^3.0.0",
-    "antd": "^5.4.0",
-    "axios": "^1.5.1",
-    "cherry-markdown": "^0.8.25",
-    "less": "^4.1.3",
-    "nprogress": "^0.2.0",
-    "qs": "^6.11.2",
-    "react-cropper": "^2.3.2",
-    "react-redux": "^8.1.3",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2",
-    "store": "^2.0.12",
-    "typescript": "^4.9.5",
-    "vite": "^4.2.1"
-  },
-  "optionalDependencies": {
-    "echarts": "^5.2.2",
-    "mathjax": "^3.2.0"
+    "@types/node": "^20.12.8",
+    "@types/nprogress": "^0.2.3",
+    "@types/qs": "^6.9.15",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   }
 }
